--- a/dev-app-update.yml
+++ b/dev-app-update.yml
@@ -1,3 +1,3 @@
 provider: generic
-url: https://example.com/auto-updates
+url: https://github.com/DEFSAK/new-admin-gui
 updaterCacheDirName: admingoowee-vanilla-ts-updater
