Fix me being dumb

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@yaireo/tagify": "^4.31.1",
     "axios": "^1.7.4",
     "electron-clipboard-watcher": "^1.0.1",
+    "electron-overlay-window": "^3.3.0",
     "electron-settings": "^4.0.4",
     "electron-updater": "^6.1.7",
     "express": "^4.19.2",
@@ -42,6 +43,7 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.8",
+    "@types/simple-oauth2": "^5.0.7",
     "@types/yaireo__tagify": "^4.27.0",
     "electron": "^31.0.2",
     "electron-builder": "^24.13.3",
